fix close button spacing

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -356,6 +356,7 @@
   margin-bottom: 0vw;
   text-align: center;
   border: none;
+  z-index: 100;
 }
 
 .dropdown-content {
@@ -377,7 +378,7 @@
 
 .dropdown-close-button {
   position: fixed;
-  bottom: 7vh;
+  bottom: 3.5vh;
   left: 50%;
   transform: translateX(-50%);
   background: #FFF;
@@ -389,7 +390,7 @@
   justify-content: center;
   align-items: center;
   cursor: pointer;
-  z-index: 2;
+  z-index: 101;
 }
 
 
